<resources>
    <string name="app_name">DonationX</string>
    <string name="donateTitle">Welcome Homer</string>
    <string name="donateSubtitle">Please Give Generously</string>
    <string name="donateButton">Donate</string>
    <string name="paypal">PayPal</string>
    <string name="direct">Direct</string>
    <string name="amount">Amount</string>
    <string name="total">Total so Far</string>
    <string name="totalSoFar">$ Total</string>
    <string name="reportTitle">Donations Report</string>
    <string name="defaultAmount">00</string>
    <string name="defaultMethod">N/A</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="action_donate">Donate</string>
    <string name="action_report">Report</string>
    <string name="total_donated">$%d</string>

    <string name="action_share">Share</string>
    <string name="action_send">Send</string>
    <string name="group_communicate">Communicate</string>

    <string name="nav_header_title">DonationX (Lab)</string>
    <string name="nav_header_subtitle">voteforhomer@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_about">About Us</string>
    <string name="aboutus_title">Homer for President !!</string>
    <string name="aboutus_message">Hi, I\'m Homer\n\nPlease vote for me.\n\n Please Please Please Please!!</string>

    <string name="donationsNotFound">No Donations Yet...\nGo Make a Donation!</string>
    <string name="donationError">Error : Couldn\'t Make a Donation...</string>

    <string name="donationDetails">Donation Details</string>
    <string name="amt">Amount :</string>
    <string name="payment">Payment :</string>
    <string name="message">Message :</string>
    <string name="upvotes">UpVotes :</string>

    <!-- -->

    <string name="questsNotFound">No Quests Yet...\n Get Started With One!</string>
    <string name="questError">Error : Couldn\'t Make The Quest</string>
    <string name="questTitle">Welcome User</string>
    <string name="questSubtitle">Please make your quest here</string>
    <string name="questName">Quest Name</string>
    <string name="questDescription">Description</string>
    <string name="questLocationName">Location Name</string>
    <string name="questRewardAmount">Reward Amount</string>
    <string name="questComplete">Quest Is Completed?</string>
    <string name="addQuestLocation">Add Location</string>
    <string name="saveQuestLocation">Save Location</string>

    <string name="questButton">Make Quest</string>
    <string name="TotalQuestsCompleted">Quests Completed So Far</string>
    <string name="enterRewardAmount">Enter Reward Amount</string>

    <string name="totalQuestsCompletedNumber">${%d}</string>

    <string name="actionQuest">Quests</string>
    <string name="actionCampaign">Campaign</string>

    <string name="searchByQuestName">Search By Name :</string>

    <string name="editQuestTitle">Currently Editing Quest ID :</string>
    <string name="editQuestID">0</string>
    <string name="updateButton">Update</string>
    <string name="deleteButton">Delete</string>
    <string name="questUpdateError">Error : Couldn\'t Update The Quest</string>
    <string name="editQuestLocationButton">Update Location</string>

    <string name="aboutUsText">Welcome To The DnD Companion App!\n\n This App Can Be Used To Track Quest And Campaign Progress\n\n This Will Be Able To Track More In Future Updates!</string>
    <string name="navHeaderTitle">DnD Campaign Tracker</string>
    <string name="navHeaderSubTitle">dndcampaigntracker@dnd.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>